# sampler-cpp

./: .gitignore  LICENSE.txt  Makefile.am  README.md  configure.ac
examples/: ptdemo.cpp
scripts/: acceptance_fraction.py  plot_mcmc_results.py  plot_pt_results.py
src/: Makefile.am  chain.h  custom_types.h  linalg.cpp  linalg.h  main.cpp  mhsampler.cpp  mhsampler.h  ptsampler.cpp  ptsampler.h  rand_helpers.cpp  rand_helpers.h  sampler.cpp  sampler.h
tests/: mh_tests.cpp  pt_tests.cpp  stats_tests.cpp  tests.cpp
